@@ -824,7 +824,7 @@ Year starts on
 Themes
 
 #change_settings_text
-Change Settings
+Settings
 
 #search_recipient_txt
 Recipient
