@@ -1,3 +1,8 @@
+Development Portal (2015-09-03 shi)
+==============================
+Change settings text visible next to cog icon
+
+
 Development Portal (2015-09-02 shi)
 ==============================
 Changed BETA to badge status
